# SnapFold

./: .gitignore  in-progress.txt  index.html  index.js  main.js  package-lock.json  package.json  start  to-do.txt  tsconfig.json
backend/: README.md  config.py  main.py  process_frames.py  requirements.txt
cv-stuff/: exportedFiles.json  generate-pre-annotations.py  hello.py  pyproject.toml  template_annotation.json  tmp.py
extracted_hands/: frame_1212_extracted.json
src/: control-bar.css  control-bar.html  main.ts  overlay.html
